Make sure audio element with added controls is not collapsed e.g. https://ota-ch.com/jp/res/488860.html

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -197,6 +197,7 @@ body.hasDropDownNav{
 audio.controls-added {
   display: block;
   margin: auto;
+  white-space: normal;
 }
 :root.anti-autoplay div.embed {
   position: static;
